--- a/Paginas/style/Cadastro.css
+++ b/Paginas/style/Cadastro.css
@@ -3,10 +3,11 @@
     }
 
     body {
-      margin: 0;
-      background-image: url(../../img/fundo2.png);
- 
-      height: 100vh;
+    background-image: url('../../img/fundo2.png');  
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
     }
     .centralizar{
     display: flex;
